--- a/client/views/matches/matches.html
+++ b/client/views/matches/matches.html
@@ -8,9 +8,11 @@
                 </ol>
             </div>
         </div>
-        <div class="row">
+        <div class="row row-margin-5">
             <div class="col-md-12">
-
+                <div class="pull-right">
+                    <a href="{{pathFor 'match_create'}}" class="btn btn-success"><i class="fa fa-plus"></i> Tạo trận đấu</a>
+                </div>
             </div>
         </div>
     </div>
