--- a/client/stylesheets/app.css
+++ b/client/stylesheets/app.css
@@ -13,6 +13,20 @@ body {
     margin-right: -5px !important;
 }
 
+.ol-field{
+    padding-left: 30px;
+}
+
+.ol-field li{
+    line-height: 34px;
+    margin-bottom: 10px;
+}
+
+.ol-field-li{
+    float:right;
+    width: 99%;
+}
+
 .map-container{
     min-height: 99%;
     height: 100%;
@@ -32,6 +46,7 @@ body {
 }
 
 .window-left-50{
+    padding-top : 10px;
     width : 50%;
     left : 0px;
     bottom: 0px;
