--- a/client/views/matches/match_create.html
+++ b/client/views/matches/match_create.html
@@ -36,6 +36,7 @@
                             <li>
                                 <div class="ol-field-li">
                                     {{> afFieldInput name="location" placeholder="Ghi rõ địa chỉ và kéo thả biểu tượng bên bản đồ đúng vị trí" }}
+                                    {{> afFieldInput name="latlng" type="hidden" value=latlng}}
                                 </div>
                             </li>
                             <li>
@@ -43,8 +44,29 @@
                                     {{> afFieldInput name="startDate" placeholder="Chọn ngày/giờ bắt đầu" }}
                                 </div>
                             </li>
+                            <li>
+                                <div class="ol-field-li">
+                                    {{> afFieldInput name="fee" placeholder="Lệ phí (nếu có)" }}
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ol-field-li">
+                                    {{> afFieldInput name="phone" placeholder="Điện thoại liên hệ (nếu có)" }}
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ol-field-li">
+                                    {{> afFieldInput name="website" placeholder="Địa chỉ Webiste (nếu có)" }}
+                                </div>
+                            </li>
+                            <li>
+                                <div class="ol-field-li">
+                                    {{> afFieldInput name="title" placeholder="Nhập tiêu đề (125 ký tự)" }}
+                                </div>
+                            </li>
                         </ol>
                     </fieldset>
+                    <br/>
                     {{#if currentUser}}
                         <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Lưu lại</button>
                         <button type="reset" class="btn btn-default"><i class="fa fa-eraser"></i>Làm lại</button>
