--- a/client/views/matches/matches.html
+++ b/client/views/matches/matches.html
@@ -15,6 +15,11 @@
                 </div>
             </div>
         </div>
+        <div class="row row-margin-5">
+            <div class="col-md-12">
+
+            </div>
+        </div>
     </div>
     <div class="window window-right-50">
         <div class="map-container">
